--- a/css/styles.css
+++ b/css/styles.css
@@ -42,10 +42,18 @@ header{
     border-radius: 10px;
 }
 
+#caja0{
+    background: #25ff2a;
+}
+
 #caja1{
     line-height: 50px
 }
 
 #caja2{
     line-height: 50px;
+}
+
+#caja5{
+    background: #ff2e2e;
 }
