--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ header{
 }
 
 .caja{
-    background: #333;
+    background: #1f1f1f;
     height: 100px;
     font-family: 'Work Sans', sans-serif;
     margin: 10px 0;
