--- a/css/styles.css
+++ b/css/styles.css
@@ -34,11 +34,10 @@ header{
 }
 
 .caja{
-    background: #1f1f1f;
     height: 100px;
     font-family: 'Work Sans', sans-serif;
     margin: 10px 0;
-    background: #eee;
+    background: #333;
     border-radius: 10px;
 }
 
