--- a/css/styles.css
+++ b/css/styles.css
@@ -15,14 +15,15 @@ body{
     flex-flow: column nowrap;
 }
 header{
-    color: #fff;
-    margin: 20px 0 30px 0;
+    color: rgb(255, 230, 0);
+    margin: 20px 0 15px 0;
     display: flex;
     justify-content: center;
-    padding: 10px 0;
+    padding: 10px 0 15 0;
     font-family: 'Potta One', cursive;
     font-size: 10%px;
     border-radius: 10px;
+    border: 3px dashed rgb(255, 230, 0);
 }
 
 #lista{
