--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ header{
     margin: 20px 0 15px 0;
     display: flex;
     justify-content: center;
-    padding: 10px 0 15 0;
+    padding: 10px 0 15px 0;
     font-family: 'Potta One', cursive;
     font-size: 10%px;
     border-radius: 10px;
